[gd_scene load_steps=18 format=3 uid="uid://cmuplealaxaj0"]

[ext_resource type="Script" path="res://scenes/turtle/turtle.gd" id="1_1hkni"]
[ext_resource type="Texture2D" uid="uid://bwfxemeas05r7" path="res://images/turtle/turtle_body.png" id="1_amo22"]
[ext_resource type="Texture2D" uid="uid://dg3c88moa2sg1" path="res://images/turtle/faces/turtle_face_4.png" id="4_6f6f4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjnk4"]
size = Vector2(241.25, 130.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_wows0"]
radius = 94.5

[sub_resource type="CircleShape2D" id="CircleShape2D_o2ukc"]
radius = 100.545

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_82b0u"]
radius = 51.5267
height = 256.608

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1fy3f"]
radius = 82.4282
height = 356.041

[sub_resource type="CircleShape2D" id="CircleShape2D_03qjk"]
radius = 67.6497

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_swhy4"]
radius = 34.791
height = 188.77

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8wd84"]
radius = 89.2607
height = 324.703

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwxjt"]
size = Vector2(202.5, 51.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_i5opg"]
radius = 140.304

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vv2yt"]
size = Vector2(370.5, 301.718)

[sub_resource type="Animation" id="Animation_swxah"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurtleBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(579, 312)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TurtleBody:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.137881]
}

[sub_resource type="Animation" id="Animation_0uq51"]
resource_name = "enter"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurtleBody:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1584, 328), Vector2(579, 312)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TurtleBody:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.207694, -0.137881, 0.207694, -0.137881, 0.207694, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q4dea"]
_data = {
"RESET": SubResource("Animation_swxah"),
"enter": SubResource("Animation_0uq51")
}

[node name="Turtle" type="Node2D"]
script = ExtResource("1_1hkni")

[node name="TurtleBody" type="Sprite2D" parent="."]
position = Vector2(579, 312)
rotation = -0.137881
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("1_amo22")

[node name="TurtleFace" type="Sprite2D" parent="TurtleBody"]
position = Vector2(-337.5, -192)
texture = ExtResource("4_6f6f4")

[node name="Belly" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/Belly"]
position = Vector2(1.5, 197.25)
shape = SubResource("RectangleShape2D_rjnk4")

[node name="Butt" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/Butt"]
position = Vector2(340.5, 93)
shape = SubResource("CircleShape2D_wows0")

[node name="Face" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/Face"]
position = Vector2(-342, -207)
shape = SubResource("CircleShape2D_o2ukc")

[node name="FeetBack" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/FeetBack"]
position = Vector2(304.5, 292.5)
rotation = -1.68773
shape = SubResource("CapsuleShape2D_82b0u")

[node name="FeetFront" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/FeetFront"]
position = Vector2(-259.5, 313.5)
rotation = 1.66504
shape = SubResource("CapsuleShape2D_1fy3f")

[node name="Giblets" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/Giblets"]
position = Vector2(189, 178.5)
shape = SubResource("CircleShape2D_03qjk")

[node name="Head" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/Head"]
position = Vector2(-322.5, -331.5)
rotation = 1.70868
shape = SubResource("CapsuleShape2D_swhy4")

[node name="Neck" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/Neck"]
position = Vector2(-354, 16.5)
rotation = -0.469494
shape = SubResource("CapsuleShape2D_8wd84")

[node name="ShellTip" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/ShellTip"]
position = Vector2(24.75, -307.75)
shape = SubResource("RectangleShape2D_gwxjt")

[node name="ShellFront" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/ShellFront"]
position = Vector2(-120, -144)
shape = SubResource("CircleShape2D_i5opg")

[node name="ShellBack" type="Area2D" parent="TurtleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleBody/ShellBack"]
position = Vector2(187.5, -114)
rotation = -0.280998
shape = SubResource("RectangleShape2D_vv2yt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q4dea")
}
autoplay = "enter"

[connection signal="mouse_entered" from="TurtleBody/Belly" to="." method="_on_belly_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/Belly" to="." method="_on_belly_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/Butt" to="." method="_on_butt_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/Butt" to="." method="_on_butt_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/Face" to="." method="_on_face_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/Face" to="." method="_on_face_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/FeetBack" to="." method="_on_feet_back_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/FeetBack" to="." method="_on_feet_back_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/FeetFront" to="." method="_on_feet_front_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/FeetFront" to="." method="_on_feet_front_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/Giblets" to="." method="_on_gibbles_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/Giblets" to="." method="_on_gibbles_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/Head" to="." method="_on_head_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/Head" to="." method="_on_head_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/Neck" to="." method="_on_neck_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/Neck" to="." method="_on_neck_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/ShellTip" to="." method="_on_shell_tip_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/ShellTip" to="." method="_on_shell_tip_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/ShellFront" to="." method="_on_shell_front_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/ShellFront" to="." method="_on_shell_front_mouse_exited"]
[connection signal="mouse_entered" from="TurtleBody/ShellBack" to="." method="_on_shell_back_mouse_entered"]
[connection signal="mouse_exited" from="TurtleBody/ShellBack" to="." method="_on_shell_back_mouse_exited"]
